// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users Service when creating new user accounts will create a new user with all options set 1`] = `
{
  "email": "rule1@diveclub.ca",
  "emailVerified": false,
  "hasPassword": true,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": undefined,
  "lastPasswordChange": undefined,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "profile": {
    "avatar": "https://gravatar.com/Tyler.Durden",
    "bio": "I don't talk about my dive clug",
    "birthdate": "1987-02-12",
    "customData": {},
    "experienceLevel": "Experienced",
    "location": "Vancouver, BC",
    "memberSince": 2023-10-02T10:23:02.003Z,
    "name": "Tyler Durden, Esq.",
    "startedDiving": "2011",
    "userId": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
    "username": "Tyler.Durden",
  },
  "role": "user",
  "settings": {
    "depthUnit": "m",
    "pressureUnit": "bar",
    "profileVisibility": "friends",
    "temperatureUnit": "C",
    "weightUnit": "kg",
  },
  "username": "Tyler.Durden",
}
`;

exports[`Users Service when creating new user accounts will create a new user with all options set 2`] = `
UserEntity {
  "avatar": "https://gravatar.com/Tyler.Durden",
  "bio": "I don't talk about my dive clug",
  "birthdate": "1987-02-12",
  "certifications": undefined,
  "customData": {},
  "depthUnit": "m",
  "email": "rule1@diveclub.ca",
  "emailLowered": "rule1@diveclub.ca",
  "emailVerificationToken": null,
  "emailVerificationTokenExpiration": null,
  "emailVerified": false,
  "experienceLevel": "Experienced",
  "friends": undefined,
  "fulltext": undefined,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": null,
  "lastPasswordChange": null,
  "location": "Vancouver, BC",
  "memberSince": 2023-10-02T10:23:02.003Z,
  "name": "Tyler Durden, Esq.",
  "oauth": undefined,
  "passwordHash": "<<HASHED PASSWORD>>",
  "passwordResetToken": null,
  "passwordResetTokenExpiration": null,
  "pressureUnit": "bar",
  "profileVisibility": "friends",
  "role": "user",
  "startedDiving": "2011",
  "tanks": undefined,
  "temperatureUnit": "C",
  "username": "Tyler.Durden",
  "usernameLowered": "tyler.durden",
  "weightUnit": "kg",
}
`;

exports[`Users Service when creating new user accounts will create new users with minimal options 1`] = `
{
  "email": undefined,
  "emailVerified": false,
  "hasPassword": false,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": undefined,
  "lastPasswordChange": undefined,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "profile": {
    "avatar": undefined,
    "bio": undefined,
    "birthdate": undefined,
    "customData": undefined,
    "experienceLevel": undefined,
    "location": undefined,
    "memberSince": 2023-10-02T10:23:02.003Z,
    "name": undefined,
    "startedDiving": undefined,
    "userId": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
    "username": "Roger69_83",
  },
  "role": "user",
  "settings": {
    "depthUnit": "m",
    "pressureUnit": "bar",
    "profileVisibility": "friends",
    "temperatureUnit": "C",
    "weightUnit": "kg",
  },
  "username": "Roger69_83",
}
`;

exports[`Users Service when creating new user accounts will create new users with minimal options 2`] = `
UserEntity {
  "avatar": null,
  "bio": null,
  "birthdate": null,
  "certifications": undefined,
  "customData": null,
  "depthUnit": "m",
  "email": null,
  "emailLowered": null,
  "emailVerificationToken": null,
  "emailVerificationTokenExpiration": null,
  "emailVerified": false,
  "experienceLevel": null,
  "friends": undefined,
  "fulltext": undefined,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": null,
  "lastPasswordChange": null,
  "location": null,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "name": null,
  "oauth": undefined,
  "passwordHash": null,
  "passwordResetToken": null,
  "passwordResetTokenExpiration": null,
  "pressureUnit": "bar",
  "profileVisibility": "friends",
  "role": "user",
  "startedDiving": null,
  "tanks": undefined,
  "temperatureUnit": "C",
  "username": "Roger69_83",
  "usernameLowered": "roger69_83",
  "weightUnit": "kg",
}
`;

exports[`Users Service when searching profiles Will return results sorted by memberSince in asc order 1`] = `
[
  {
    "memberSince": 2018-03-19T11:29:22.558Z,
    "username": "Gardner.Johnson74",
  },
  {
    "memberSince": 2018-04-19T21:25:00.549Z,
    "username": "Brigitte.Kihn",
  },
  {
    "memberSince": 2018-04-20T20:37:07.766Z,
    "username": "Lorenz59",
  },
  {
    "memberSince": 2018-05-13T22:06:14.604Z,
    "username": "Casimir_DuBuque",
  },
  {
    "memberSince": 2018-06-25T23:18:47.167Z,
    "username": "Lucy55",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by memberSince in desc order 1`] = `
[
  {
    "memberSince": 2024-03-03T00:29:00.081Z,
    "username": "Steve54",
  },
  {
    "memberSince": 2024-01-22T09:55:07.775Z,
    "username": "Lavonne0",
  },
  {
    "memberSince": 2023-12-07T15:19:18.511Z,
    "username": "Erick_Roberts",
  },
  {
    "memberSince": 2023-11-21T22:50:56.464Z,
    "username": "Marie28",
  },
  {
    "memberSince": 2023-10-02T23:57:14.826Z,
    "username": "Eleonore.Hilpert",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by username in asc order 1`] = `
[
  {
    "memberSince": 2022-01-03T11:06:19.499Z,
    "username": "Aaron_Wehner28",
  },
  {
    "memberSince": 2021-02-13T04:26:21.255Z,
    "username": "Aiyana.McCullough",
  },
  {
    "memberSince": 2018-10-20T04:40:09.678Z,
    "username": "Alessia.Upton8",
  },
  {
    "memberSince": 2022-08-31T08:43:02.480Z,
    "username": "Aliyah.Kunde4",
  },
  {
    "memberSince": 2019-06-29T09:03:36.186Z,
    "username": "Amara.Cummings13",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by username in desc order 1`] = `
[
  {
    "memberSince": 2022-06-20T01:36:16.997Z,
    "username": "Winona.Doyle",
  },
  {
    "memberSince": 2020-04-08T12:22:42.152Z,
    "username": "Tyler30",
  },
  {
    "memberSince": 2021-11-03T23:21:09.613Z,
    "username": "Trey.Langosh",
  },
  {
    "memberSince": 2020-12-24T06:16:47.642Z,
    "username": "Tomasa33",
  },
  {
    "memberSince": 2019-05-01T03:13:57.366Z,
    "username": "Sven_White",
  },
]
`;

exports[`Users Service when searching profiles will allow showing results beyond the first page 1`] = `
{
  "totalCount": 100,
  "users": [
    {
      "email": "Audreanne41@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "9d72ecc0-b240-47c9-9d42-e6d196a3383f",
      "isLockedOut": false,
      "lastLogin": 2024-02-13T21:31:34.532Z,
      "lastPasswordChange": 2022-03-30T19:07:14.944Z,
      "memberSince": 2019-02-17T21:57:07.852Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1182.jpg",
        "bio": "Corporis dolor atque. Hic similique earum deleniti optio repellat consequatur eaque cum. Facere id ducimus adipisci eum ducimus voluptatem odio voluptatem deleniti. Sint maiores officia temporibus labore. Officia perspiciatis at eveniet sapiente. Assumenda pariatur veniam officiis dolorem corrupti. Quis similique aut voluptatum fugiat ipsam nam.",
        "birthdate": "2008-11-07",
        "customData": undefined,
        "experienceLevel": "Novice",
        "location": "Evanston",
        "memberSince": 2019-02-17T21:57:07.852Z,
        "name": "Mrs. Israel Stracke",
        "startedDiving": "2001",
        "userId": "9d72ecc0-b240-47c9-9d42-e6d196a3383f",
        "username": "Audreanne.Larkin79",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "friends",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Audreanne.Larkin79",
    },
    {
      "email": "Ayla43@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "isLockedOut": false,
      "lastLogin": 2024-02-16T22:40:49.027Z,
      "lastPasswordChange": 2022-12-26T02:36:38.003Z,
      "memberSince": 2020-02-24T22:30:50.944Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
        "bio": "Reiciendis debitis voluptatem veritatis dolore. Recusandae aspernatur quas molestiae in tempore eligendi distinctio ipsa cupiditate. Voluptatibus commodi eum nulla sint. Aperiam culpa blanditiis cumque provident asperiores magni ea mollitia. Quos velit id. Earum dolorum velit eveniet ipsa doloremque. Omnis dignissimos ea qui rerum soluta explicabo deserunt veniam.",
        "birthdate": "1980-04-03",
        "customData": undefined,
        "experienceLevel": "Expert",
        "location": "West Covina",
        "memberSince": 2020-02-24T22:30:50.944Z,
        "name": "Devin Ratke",
        "startedDiving": "2006",
        "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
        "username": "Ayla.Rippin",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "public",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Ayla.Rippin",
    },
    {
      "email": "Barrett.Stracke@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "959eb386-3ca8-42e1-9ce8-750a80e787eb",
      "isLockedOut": false,
      "lastLogin": 2024-02-26T17:35:37.158Z,
      "lastPasswordChange": 2022-06-30T05:09:04.006Z,
      "memberSince": 2023-05-22T08:27:23.626Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1096.jpg",
        "bio": "Consequatur consequatur quos ipsa inventore minima ducimus. Amet voluptas maxime quod placeat accusantium iste temporibus occaecati nostrum. Deleniti accusamus doloremque est voluptas quaerat quod. Illo autem nam quidem ipsa iusto. Ipsum reprehenderit eius veniam dolorem.",
        "birthdate": "2009-11-18",
        "customData": undefined,
        "experienceLevel": "Professional",
        "location": "Boise City",
        "memberSince": 2023-05-22T08:27:23.626Z,
        "name": "Justin Davis",
        "startedDiving": "2009",
        "userId": "959eb386-3ca8-42e1-9ce8-750a80e787eb",
        "username": "Barrett_Stracke77",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "friends",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Barrett_Stracke77",
    },
    {
      "email": "Bell_Herzog33@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "1cde744c-c746-4f1a-84e5-3def80532ce3",
      "isLockedOut": false,
      "lastLogin": 2024-02-15T10:53:36.871Z,
      "lastPasswordChange": 2023-11-03T22:09:20.952Z,
      "memberSince": 2019-11-30T06:19:48.587Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/180.jpg",
        "bio": "Architecto maxime praesentium recusandae necessitatibus impedit reprehenderit beatae cupiditate. Veniam repellat aliquam optio eveniet odio aliquid officiis ad. Mollitia quas quam ipsam nam. Quo iste dicta eos fugit. Distinctio eos quos nisi qui tempore. Quia nobis alias aspernatur voluptas iste non sunt.",
        "birthdate": "1966-09-04",
        "customData": undefined,
        "experienceLevel": "Beginner",
        "location": "San Buenaventura (Ventura)",
        "memberSince": 2019-11-30T06:19:48.587Z,
        "name": "Luis Spinka",
        "startedDiving": "1985",
        "userId": "1cde744c-c746-4f1a-84e5-3def80532ce3",
        "username": "Bell_Herzog",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "friends",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Bell_Herzog",
    },
    {
      "email": "Bernadette_Kihn@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "91456c36-010a-4c72-82b7-2330e98f63bb",
      "isLockedOut": false,
      "lastLogin": 2024-02-16T05:18:43.473Z,
      "lastPasswordChange": 2023-05-10T08:05:10.253Z,
      "memberSince": 2022-02-24T10:45:52.314Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/75.jpg",
        "bio": "Laboriosam ratione mollitia ut nostrum consequuntur. Et officiis dolor alias libero delectus harum illo. Optio quos enim quis quidem maiores odio. Repellendus provident repellat officia recusandae sapiente dolore. Unde perferendis eligendi expedita ab vitae aliquid.",
        "birthdate": "1974-10-14",
        "customData": undefined,
        "experienceLevel": "Experience",
        "location": "Provo",
        "memberSince": 2022-02-24T10:45:52.314Z,
        "name": "June Gislason",
        "startedDiving": "2023",
        "userId": "91456c36-010a-4c72-82b7-2330e98f63bb",
        "username": "Bernadette_Kihn",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "friends",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Bernadette_Kihn",
    },
    {
      "email": "Bernhard.Runolfsson39@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "a966e53e-0d66-4dff-8f7c-2c3658eea2e4",
      "isLockedOut": false,
      "lastLogin": 2024-02-25T22:40:37.622Z,
      "lastPasswordChange": 2023-10-19T11:44:16.819Z,
      "memberSince": 2021-06-22T21:35:37.567Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/257.jpg",
        "bio": "Impedit odit quidem cupiditate vel assumenda recusandae ipsum laborum. Natus recusandae beatae reprehenderit. Ipsam possimus tempora magni possimus praesentium. Eius laboriosam suscipit rem. Ratione amet aperiam odit dolore amet excepturi qui ut.",
        "birthdate": "1987-06-28",
        "customData": undefined,
        "experienceLevel": "Professional",
        "location": "Aliso Viejo",
        "memberSince": 2021-06-22T21:35:37.567Z,
        "name": "Hannah Hyatt",
        "startedDiving": "2013",
        "userId": "a966e53e-0d66-4dff-8f7c-2c3658eea2e4",
        "username": "Bernhard54",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "private",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Bernhard54",
    },
    {
      "email": "Braulio21@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "921811b8-2bab-40e9-b491-dd79dea9caf8",
      "isLockedOut": false,
      "lastLogin": 2024-02-18T06:09:42.859Z,
      "lastPasswordChange": 2023-12-20T07:44:19.376Z,
      "memberSince": 2020-10-25T14:48:30.836Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg",
        "bio": "Natus maxime accusamus nisi ut distinctio assumenda tempora. Praesentium unde tempora ipsum quas velit. Doloremque nesciunt rerum sed dicta. Porro perferendis sapiente eum ipsum asperiores numquam fugit modi. Iusto praesentium minima ullam molestias. Incidunt illum sit repellendus ullam. Ipsum non pariatur officia inventore numquam aspernatur delectus iusto praesentium.",
        "birthdate": "1973-01-29",
        "customData": undefined,
        "experienceLevel": "Professional",
        "location": "Columbus",
        "memberSince": 2020-10-25T14:48:30.836Z,
        "name": "Kirk Klocko",
        "startedDiving": "1991",
        "userId": "921811b8-2bab-40e9-b491-dd79dea9caf8",
        "username": "Braulio19",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "public",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Braulio19",
    },
  ],
}
`;

exports[`Users Service when searching profiles will limit "page" size 1`] = `
{
  "totalCount": 100,
  "users": [
    {
      "email": "Aaron_Wehner14@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "5e1c2714-ad34-418f-9840-df005c61ead9",
      "isLockedOut": false,
      "lastLogin": 2024-03-05T06:47:48.091Z,
      "lastPasswordChange": 2023-12-13T01:14:50.426Z,
      "memberSince": 2022-01-03T11:06:19.499Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/92.jpg",
        "bio": "Ipsum debitis totam cum et commodi impedit atque beatae hic. Nobis praesentium praesentium minima doloribus. Hic ea velit repellendus adipisci ea labore animi. Blanditiis vero quis assumenda non accusamus impedit ullam. Consequuntur unde similique.",
        "birthdate": "1956-09-28",
        "customData": undefined,
        "experienceLevel": "Beginner",
        "location": "Dubuque",
        "memberSince": 2022-01-03T11:06:19.499Z,
        "name": "Doyle Oberbrunner V",
        "startedDiving": "2011",
        "userId": "5e1c2714-ad34-418f-9840-df005c61ead9",
        "username": "Aaron_Wehner28",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "private",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Aaron_Wehner28",
    },
    {
      "email": "Aiyana.McCullough@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "007f3635-e492-4a43-83e5-55de54b4e3fd",
      "isLockedOut": false,
      "lastLogin": 2024-02-24T18:27:33.512Z,
      "lastPasswordChange": 2022-12-22T04:17:35.528Z,
      "memberSince": 2021-02-13T04:26:21.255Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1160.jpg",
        "bio": "Expedita reprehenderit inventore. Ratione nostrum soluta voluptates nulla. Ducimus cupiditate maxime nesciunt libero quam tenetur. Quibusdam vitae saepe sit dolore alias magni hic. Doloremque aut aliquam quidem. Tempore esse asperiores quasi at ipsam eum eos adipisci.",
        "birthdate": "2015-10-09",
        "customData": undefined,
        "experienceLevel": "Experience",
        "location": "Hialeah",
        "memberSince": 2021-02-13T04:26:21.255Z,
        "name": "Rodney Turner",
        "startedDiving": "1995",
        "userId": "007f3635-e492-4a43-83e5-55de54b4e3fd",
        "username": "Aiyana.McCullough",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "public",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Aiyana.McCullough",
    },
    {
      "email": "Alessia_Upton@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "e8c59a17-31db-4ad0-8b7b-71873c39281e",
      "isLockedOut": false,
      "lastLogin": 2024-02-16T22:23:51.470Z,
      "lastPasswordChange": 2022-03-10T10:43:44.501Z,
      "memberSince": 2018-10-20T04:40:09.678Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/390.jpg",
        "bio": "Veritatis harum numquam fugit. Ullam laborum corporis assumenda voluptatibus ipsum iusto suscipit delectus. Eligendi cumque vitae nisi voluptatibus et. Ullam fuga animi. Ullam minima veritatis fugiat adipisci corporis. Molestias pariatur error.",
        "birthdate": "2009-05-20",
        "customData": undefined,
        "experienceLevel": "Professional",
        "location": "Azusa",
        "memberSince": 2018-10-20T04:40:09.678Z,
        "name": "Megan Ankunding",
        "startedDiving": "2007",
        "userId": "e8c59a17-31db-4ad0-8b7b-71873c39281e",
        "username": "Alessia.Upton8",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "private",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Alessia.Upton8",
    },
    {
      "email": "Aliyah72@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "df272310-96df-449a-bb4e-8663dea787f3",
      "isLockedOut": false,
      "lastLogin": 2024-02-25T22:06:41.969Z,
      "lastPasswordChange": 2022-11-13T05:09:16.944Z,
      "memberSince": 2022-08-31T08:43:02.480Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/535.jpg",
        "bio": "Explicabo molestias sed quam eaque deleniti. Eius quibusdam ipsam reprehenderit provident sit voluptates occaecati dignissimos sit. Enim quibusdam repellat quo odit modi. Molestias accusantium vero ea magnam perspiciatis corrupti. Eius id accusamus ipsa sunt exercitationem voluptatum possimus.",
        "birthdate": "2009-07-05",
        "customData": undefined,
        "experienceLevel": "Novice",
        "location": "Carson City",
        "memberSince": 2022-08-31T08:43:02.480Z,
        "name": "Clint Lindgren",
        "startedDiving": "2013",
        "userId": "df272310-96df-449a-bb4e-8663dea787f3",
        "username": "Aliyah.Kunde4",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "private",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Aliyah.Kunde4",
    },
    {
      "email": "Amara.Cummings@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "cbbdc55c-4f64-4fdf-ac63-5c42cfd80607",
      "isLockedOut": false,
      "lastLogin": 2024-02-16T14:27:37.788Z,
      "lastPasswordChange": 2023-12-27T06:10:38.079Z,
      "memberSince": 2019-06-29T09:03:36.186Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1109.jpg",
        "bio": "Voluptatem tempora dolorum ipsa occaecati similique. Et reiciendis sapiente libero vitae aperiam expedita atque. Voluptatum vero et maxime corporis vero eligendi quod facilis dolorum. Nisi officia officia fugiat quasi. Iusto possimus quos vel magni et. Ipsam esse ut laudantium.",
        "birthdate": "1971-05-26",
        "customData": undefined,
        "experienceLevel": "Experience",
        "location": "Eau Claire",
        "memberSince": 2019-06-29T09:03:36.186Z,
        "name": "Alvin Stark",
        "startedDiving": "2020",
        "userId": "cbbdc55c-4f64-4fdf-ac63-5c42cfd80607",
        "username": "Amara.Cummings13",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "friends",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Amara.Cummings13",
    },
    {
      "email": "Ashly.Daugherty@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "f449ef5a-6fb9-4459-8cdd-8cf813a0b820",
      "isLockedOut": false,
      "lastLogin": 2024-02-13T19:34:35.945Z,
      "lastPasswordChange": 2023-12-21T00:13:22.352Z,
      "memberSince": 2022-12-01T21:41:35.894Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1184.jpg",
        "bio": "Totam temporibus quaerat vel voluptates vel rem nisi cupiditate repellendus. Minus quod consectetur totam sapiente maiores deleniti. Cupiditate quaerat mollitia ipsa ullam placeat quod ut incidunt. Vero saepe reiciendis laborum reprehenderit quis non mollitia. Voluptates commodi facere exercitationem assumenda qui blanditiis quia laboriosam. Fugiat voluptates atque voluptate commodi cumque rem fugiat perspiciatis. Pariatur similique similique. Veniam veritatis mollitia distinctio repudiandae dolorum libero quia rerum.",
        "birthdate": "1987-01-26",
        "customData": undefined,
        "experienceLevel": "Expert",
        "location": "Strongsville",
        "memberSince": 2022-12-01T21:41:35.894Z,
        "name": "Miss Raymond O'Conner",
        "startedDiving": "2002",
        "userId": "f449ef5a-6fb9-4459-8cdd-8cf813a0b820",
        "username": "Ashly71",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "public",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Ashly71",
    },
    {
      "email": "Ashlynn_Kreiger50@yahoo.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "e8086bb6-10a8-4070-abb9-965acdc04ea3",
      "isLockedOut": false,
      "lastLogin": 2024-02-28T23:43:03.509Z,
      "lastPasswordChange": 2024-01-27T02:05:49.054Z,
      "memberSince": 2019-05-28T07:18:27.652Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1099.jpg",
        "bio": "Dolore molestiae architecto repellendus. Doloribus veritatis omnis. Accusantium maxime iure id in deserunt consequatur. Quidem optio provident quaerat ex. Culpa impedit minima quia repellendus ratione sapiente odit non praesentium. Cupiditate nobis magni aut autem soluta.",
        "birthdate": "1997-12-10",
        "customData": undefined,
        "experienceLevel": "Novice",
        "location": "Danville",
        "memberSince": 2019-05-28T07:18:27.652Z,
        "name": "Tracy Botsford",
        "startedDiving": "1999",
        "userId": "e8086bb6-10a8-4070-abb9-965acdc04ea3",
        "username": "Ashlynn_Kreiger86",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "friends",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Ashlynn_Kreiger86",
    },
  ],
}
`;

exports[`Users Service when searching profiles will perform text based searches 1`] = `
{
  "totalCount": 2,
  "users": [
    {
      "email": "Casimir84@gmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "9eaaf549-2def-479e-a05b-75d706cf2a9f",
      "isLockedOut": false,
      "lastLogin": 2024-02-23T04:59:53.417Z,
      "lastPasswordChange": 2023-01-07T15:35:00.304Z,
      "memberSince": 2018-05-13T22:06:14.604Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/836.jpg",
        "bio": "Et ab blanditiis similique tenetur. Eaque sit qui esse assumenda repellat molestias. Voluptatibus corrupti ea. Illo quisquam doloribus. Ut exercitationem ab maiores numquam.",
        "birthdate": "2016-05-01",
        "customData": undefined,
        "experienceLevel": "Beginner",
        "location": "Weymouth Town",
        "memberSince": 2018-05-13T22:06:14.604Z,
        "name": "Dr. Ollie Rohan",
        "startedDiving": "2002",
        "userId": "9eaaf549-2def-479e-a05b-75d706cf2a9f",
        "username": "Casimir_DuBuque",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "public",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Casimir_DuBuque",
    },
    {
      "email": "Linnea40@hotmail.com",
      "emailVerified": true,
      "hasPassword": true,
      "id": "69d335bb-8061-4a34-86f0-f3190183a194",
      "isLockedOut": false,
      "lastLogin": 2024-03-03T07:07:03.934Z,
      "lastPasswordChange": 2023-12-06T15:43:36.497Z,
      "memberSince": 2019-12-19T18:01:36.736Z,
      "profile": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/349.jpg",
        "bio": "Earum minus laborum cumque et voluptate ratione iusto. Deserunt eveniet nemo. Doloribus possimus vitae nostrum ratione voluptas animi. Quisquam totam tenetur dolores commodi neque. Inventore aperiam ex voluptatem rem numquam. Velit labore perferendis atque ducimus laborum nisi porro tempore.",
        "birthdate": "2002-11-03",
        "customData": undefined,
        "experienceLevel": "Beginner",
        "location": "Weymouth Town",
        "memberSince": 2019-12-19T18:01:36.736Z,
        "name": "Irene Kerluke",
        "startedDiving": "1991",
        "userId": "69d335bb-8061-4a34-86f0-f3190183a194",
        "username": "Linnea_Kutch23",
      },
      "role": "user",
      "settings": {
        "depthUnit": "m",
        "pressureUnit": "bar",
        "profileVisibility": "private",
        "temperatureUnit": "C",
        "weightUnit": "kg",
      },
      "username": "Linnea_Kutch23",
    },
  ],
}
`;

exports[`Users Service when searching profiles will return all public profiles when profileVisibleTo is set to "#public" 1`] = `
[
  {
    "profileVisibility": "public",
    "username": "Aiyana.McCullough",
  },
  {
    "profileVisibility": "public",
    "username": "Ashly71",
  },
  {
    "profileVisibility": "public",
    "username": "Ayla.Rippin",
  },
  {
    "profileVisibility": "public",
    "username": "Braulio19",
  },
  {
    "profileVisibility": "public",
    "username": "Brigitte.Kihn",
  },
  {
    "profileVisibility": "public",
    "username": "Bryce_Thompson97",
  },
  {
    "profileVisibility": "public",
    "username": "Bulah_Bins",
  },
  {
    "profileVisibility": "public",
    "username": "Casimir_DuBuque",
  },
  {
    "profileVisibility": "public",
    "username": "Danielle56",
  },
  {
    "profileVisibility": "public",
    "username": "Deanna_Mante68",
  },
  {
    "profileVisibility": "public",
    "username": "Drew75",
  },
  {
    "profileVisibility": "public",
    "username": "Erick_Roberts",
  },
  {
    "profileVisibility": "public",
    "username": "Gracie.Stroman",
  },
  {
    "profileVisibility": "public",
    "username": "Hermina.Emard99",
  },
  {
    "profileVisibility": "public",
    "username": "Jacey_Bernier",
  },
  {
    "profileVisibility": "public",
    "username": "Jamey87",
  },
  {
    "profileVisibility": "public",
    "username": "Jamie16",
  },
  {
    "profileVisibility": "public",
    "username": "Jaylon8",
  },
  {
    "profileVisibility": "public",
    "username": "Jett_Block95",
  },
  {
    "profileVisibility": "public",
    "username": "Judge69",
  },
  {
    "profileVisibility": "public",
    "username": "Julia.Hintz25",
  },
  {
    "profileVisibility": "public",
    "username": "Julia15",
  },
  {
    "profileVisibility": "public",
    "username": "Kendra_Little",
  },
  {
    "profileVisibility": "public",
    "username": "Kirstin52",
  },
  {
    "profileVisibility": "public",
    "username": "Liliane94",
  },
  {
    "profileVisibility": "public",
    "username": "Lurline96",
  },
  {
    "profileVisibility": "public",
    "username": "Malcolm89",
  },
  {
    "profileVisibility": "public",
    "username": "Oscar.Kling5",
  },
  {
    "profileVisibility": "public",
    "username": "Rhianna.Terry",
  },
  {
    "profileVisibility": "public",
    "username": "Sean_Ruecker",
  },
  {
    "profileVisibility": "public",
    "username": "Sonya.Hintz0",
  },
  {
    "profileVisibility": "public",
    "username": "Stephany76",
  },
  {
    "profileVisibility": "public",
    "username": "Tomasa33",
  },
  {
    "profileVisibility": "public",
    "username": "Trey.Langosh",
  },
]
`;

exports[`Users Service when searching profiles will return public profiles and profiles belonging to friends when "profilesVisibleTo" parameter is a user Id 1`] = `
[
  {
    "profileVisibility": "friends",
    "username": "Ashlynn_Kreiger86",
  },
  {
    "profileVisibility": "friends",
    "username": "Audreanne.Larkin79",
  },
  {
    "profileVisibility": "friends",
    "username": "Barrett_Stracke77",
  },
  {
    "profileVisibility": "friends",
    "username": "Clarabelle_Funk69",
  },
  {
    "profileVisibility": "friends",
    "username": "Eleonore.Hilpert",
  },
  {
    "profileVisibility": "friends",
    "username": "Giovani48",
  },
  {
    "profileVisibility": "friends",
    "username": "Isabelle.Moen91",
  },
  {
    "profileVisibility": "friends",
    "username": "Jaden_McGlynn33",
  },
  {
    "profileVisibility": "friends",
    "username": "Jakob_Goyette",
  },
  {
    "profileVisibility": "friends",
    "username": "Jeramy_Cole43",
  },
  {
    "profileVisibility": "friends",
    "username": "Jewel12",
  },
  {
    "profileVisibility": "friends",
    "username": "Minerva.Olson",
  },
  {
    "profileVisibility": "friends",
    "username": "Norris_Kshlerin60",
  },
  {
    "profileVisibility": "friends",
    "username": "Okey84",
  },
  {
    "profileVisibility": "friends",
    "username": "Reina54",
  },
  {
    "profileVisibility": "friends",
    "username": "Rene47",
  },
  {
    "profileVisibility": "friends",
    "username": "Sven_White",
  },
]
`;
